fix : used clippath for sidebar on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -352,8 +352,7 @@ button:disabled {
 		height: 100vh;
 		max-height: none;
 		z-index: 120;
-		width: 0%;
-		padding : 0;
+		clip-path: inset(0 100% 0 0);
 		transition : all 1.2s;
 	}
 }
